--- a/test/text.cyr.html
+++ b/test/text.cyr.html
@@ -1,46 +1,220 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../dist/box.css" />
-    <title>Страїца</title>
+    <title>Страница текста</title>
   </head>
   <body>
-    <header>
-      <h1>Лорем Іпсум Пример Сторінки</h1>
-    </header>
-    <main>
-      <h2>Лорем Іпсум Долор</h2>
-      <p>
-        Лорем іпсум долор сит амет, консектетур адипісцинг елит.
-        <abbr title="HyperText Markup Language">HTML</abbr> це стандартний язик
-        розмітки для створення веб-сторінок.
-      </p>
-      <h3>Консектетур Адипісцинг</h3>
-      <p>
-        Інтегер нек одіо. Презент ліберо. Сед курсус анте дапібус діам. Сед
-        нісі. Нулла куйс сем ат нібх елемендум імпередіет.
-      </p>
-      <h4>Презент Ліберо</h4>
-      <blockquote>
-        "Сед курсус анте дапібус діам. Сед нісі. Нулла куйс сем ат нібх
-        елемендум імпередіет."
-      </blockquote>
-      <h5>Нулла Куйс Сем</h5>
-      <p>
-        Фусце нек теллус сед аугуе семпер порта. Мауріс масса.
-        <sub>Підстрочний текст</sub> і <sup>надстрочний текст</sup> можуть бути
-        використані для сносок або математичних виразів.
-      </p>
-      <h6>Елемендум Імпередіет</h6>
-      <p>
-        Курабітур содалес лігуло ін ліберо. Сед дігнісім ляцінія нунк. Курабітур
-        тортор. Пеллентеске нібх.
-      </p>
-    </main>
-    <footer>
-      <p>&copy; 2023 Пример Сторінки. Всі права захищені.</p>
-    </footer>
+    <h1>Пример заголовков</h1>
+
+    <h1>Заголовок 1</h1>
+    <h2>Заголовок 2</h2>
+    <h3>Заголовок 3</h3>
+    <h4>Заголовок 4</h4>
+    <h5>Заголовок 5</h5>
+    <h6>Заголовок 6</h6>
+
+    <h1>Пример группы заголовков</h1>
+    <hgroup>
+      <h1>Заголовок 1</h1>
+      <h2>Заголовок 2</h2>
+    </hgroup>
+
+    <h1>Пример абзацев</h1>
+    <p>
+      Однажды в маленькой деревне жила молодая девушка по имени Лили. Она любила
+      исследовать леса и открывать новые места. Однажды она нашла скрытую
+      тропинку, которая привела к волшебному саду, полному разноцветных цветов и
+      сверкающих ручьев. Лили провела часы, играя в саду, заводя друзей среди
+      животных и наслаждаясь красотой вокруг. Когда солнце начало садиться, она
+      пообещала вернуться на следующий день, чтобы продолжить свое приключение.
+    </p>
+    <p>
+      На следующее утро Лили проснулась рано, с нетерпением желая вернуться в
+      волшебный сад. Она собрала небольшой рюкзак с закусками и отправилась в
+      путь. Идя через лес, она заметила, как поют птицы и ярко светит солнце.
+      Когда она добралась до скрытой тропинки, она почувствовала волнение и
+      удивление. Она последовала по тропинке и вскоре снова оказалась в
+      зачарованном саду. На этот раз она обнаружила красивый фонтан в центре
+      сада, с кристально чистой водой, плавно текущей. Лили села у фонтана,
+      наслаждаясь спокойной атмосферой и чувствуя благодарность за волшебное
+      место, которое она нашла.
+    </p>
+    <p>
+      С каждым днем Лили посещала волшебный сад. Она узнавала больше о растениях
+      и животных, живущих там, и даже обнаружила скрытый домик на дереве высоко
+      на ветвях древнего дуба. Домик на дереве стал ее тайным убежищем, где она
+      могла наблюдать за миром внизу и мечтать о своих будущих приключениях.
+      Лили знала, что сад - особенное место, и она чувствовала себя счастливой,
+      что нашла его. Она пообещала всегда заботиться о нем и сохранять его магию
+      на долгие годы.
+    </p>
+
+    <h1>Пример цитаты, ссылок и горизонтальной линии</h1>
+    <blockquote>
+      Единственная истинная мудрость заключается в осознании того, что ты ничего
+      не знаешь.
+    </blockquote>
+    <a href="https://ru.wikipedia.org/wiki/Сократ">Сократ</a>
+    <hr />
+
+    <h1>Пример таблицы</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Животное</th>
+          <th>Класс</th>
+          <th>Среда обитания</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Лев</td>
+          <td>Млекопитающее</td>
+          <td>Саванна</td>
+        </tr>
+        <tr>
+          <td>Орел</td>
+          <td>Птица</td>
+          <td>Горы</td>
+        </tr>
+        <tr>
+          <td>Акула</td>
+          <td>Рыба</td>
+          <td>Океан</td>
+        </tr>
+        <tr>
+          <td>Лягушка</td>
+          <td>Земноводное</td>
+          <td>Болота</td>
+        </tr>
+        <tr>
+          <td>Пингвин</td>
+          <td>Птица</td>
+          <td>Антарктида</td>
+        </tr>
+        <tr>
+          <td>Слон</td>
+          <td>Млекопитающее</td>
+          <td>Саванна</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="3">Конец списка животных</td>
+        </tr>
+      </tfoot>
+    </table>
+
+    <h1>Пример списка</h1>
+    <ul>
+      <li>
+        Установите четкие цели и задачи
+        <ul>
+          <li>Определите свое видение</li>
+          <li>Разбейте задачи на части</li>
+          <li>Установите сроки</li>
+        </ul>
+      </li>
+      <li>
+        Оставайтесь сосредоточенными и дисциплинированными
+        <ol>
+          <li>Приоритизируйте задачи</li>
+          <li>Устраняйте отвлекающие факторы</li>
+          <li>
+            Делайте регулярные перерывы
+            <ul>
+              <li>Прогуляйтесь</li>
+              <li>Практикуйте глубокое дыхание</li>
+              <li>Пейте воду</li>
+            </ul>
+          </li>
+        </ol>
+      </li>
+      <li>Сохраняйте позитивный настрой</li>
+      <li>Будьте гибкими и открытыми к изменениям</li>
+      <li>Учитесь на неудачах и ошибках</li>
+      <li>Ищите обратную связь и постоянно совершенствуйтесь</li>
+      <li>Стройте крепкие отношения и сети</li>
+      <li>Оставайтесь настойчивыми и никогда не сдавайтесь</li>
+    </ul>
+
+    <h1>Примеры текста</h1>
+    <p>
+      Тег <code>&lt;a&gt;</code> определяет гиперссылку, которая используется
+      для перехода с одной страницы на другую. Самый важный атрибут элемента
+      <code>&lt;a&gt;</code> - это атрибут <code>href</code>, который указывает
+      на место назначения ссылки.
+    </p>
+    <p>
+      Тег <kbd>&lt;kbd&gt;</kbd> используется для определения ввода с
+      клавиатуры. Содержимое внутри отображается шрифтом с фиксированной шириной
+      по умолчанию.
+    </p>
+    <p>
+      Тег <samp>&lt;samp&gt;</samp> используется для определения образца вывода
+      компьютерной программы. Содержимое внутри отображается шрифтом с
+      фиксированной шириной по умолчанию.
+    </p>
+    <p>
+      Тег <var>&lt;var&gt;</var> используется для определения переменной в
+      компьютерной программе. Содержимое внутри отображается шрифтом с
+      фиксированной шириной по умолчанию.
+    </p>
+
+    <p>
+      Тег <code>&lt;pre&gt;</code> определяет предварительно отформатированный
+      текст. Текст внутри элемента <code>&lt;pre&gt;</code> отображается шрифтом
+      с фиксированной шириной и сохраняет как пробелы, так и разрывы строк.
+      Например:
+    </p>
+    <pre>
+      function fibonacci(n) {
+        if (n <= 1) return n;
+        return fibonacci(n - 1) + fibonacci(n - 2);
+      }
+
+      console.log(fibonacci(10)); // Вывод: 55
+    </pre>
+    <p>
+      Тег
+      <abbr title="HyperText Markup Language">&lt;abbr&gt;</abbr> используется
+      для представления аббревиатуры или акронима. Когда пользователь наводит
+      курсор на аббревиатуру, отображается полное описание, предоставляя
+      дополнительный контекст. Это особенно полезно для технических терминов или
+      фраз, которые могут быть не сразу понятны всем читателям.
+    </p>
+    <p>
+      Тег <code>&lt;summary&gt;</code> используется вместе с тегом
+      <code>&lt;details&gt;</code> для предоставления краткого содержания или
+      заголовка для деталей, которые могут быть просмотрены или скрыты
+      пользователем. Например:
+
+      <details>
+        <summary>Подробнее о волшебном саде</summary>
+        <p>
+          Волшебный сад был не просто обычным местом. У него был уникальный
+          шарм, который захватывал любого, кто его посещал. Цветы, казалось,
+          цвели в самых ярких цветах, а ручьи сверкали, как бриллианты под
+          солнечным светом. Сад был убежищем для многих животных, и они жили в
+          гармонии, создавая мирную и спокойную атмосферу.
+        </p>
+      </details>
+    </p>
+    <p>
+      Тег <code>&lt;address&gt;</code> используется для определения контактной
+      информации автора или владельца документа или статьи. Содержимое внутри
+      обычно отображается курсивом и может включать физические адреса, адреса
+      электронной почты, номера телефонов и URL-адреса. Например:
+    </p>
+    <address>
+      Написано Джоном Доу.<br />
+      Посетите нас по адресу:<br />
+      Example.com<br />
+      Ящик 564, Диснейленд<br />
+      США
+    </address>
   </body>
 </html>
