--- a/test/text.html
+++ b/test/text.html
@@ -4,43 +4,214 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../dist/box.css" />
-    <title>Sample Page</title>
+    <title>Text Page</title>
   </head>
   <body>
-    <header>
-      <h1>Lorem Ipsum Sample Page</h1>
-    </header>
-    <main>
-      <h2>Lorem Ipsum Dolor</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        <abbr title="HyperText Markup Language">HTML</abbr> is the standard
-        markup language for creating web pages.
-      </p>
-      <h3>Consectetur Adipiscing</h3>
-      <p>
-        Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed
-        nisi. Nulla quis sem at nibh elementum imperdiet.
-      </p>
-      <h4>Praesent Libero</h4>
-      <blockquote>
-        "Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh
-        elementum imperdiet."
-      </blockquote>
-      <h5>Nulla Quis Sem</h5>
-      <p>
-        Fusce nec tellus sed augue semper porta. Mauris massa.
-        <sub>Subscript text</sub> and <sup>superscript text</sup> can be used
-        for footnotes or mathematical expressions.
-      </p>
-      <h6>Elementum Imperdiet</h6>
-      <p>
-        Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.
-        Curabitur tortor. Pellentesque nibh.
-      </p>
-    </main>
-    <footer>
-      <p>&copy; 2023 Sample Page. All rights reserved.</p>
-    </footer>
+    <h1>Headers Sample</h1>
+
+    <h1>Header 1</h1>
+    <h2>Header 2</h2>
+    <h3>Header 3</h3>
+    <h4>Header 4</h4>
+    <h5>Header 5</h5>
+    <h6>Header 6</h6>
+
+    <h1>Headers Group Sample</h1>
+    <hgroup>
+      <h1>Header 1</h1>
+      <h2>Header 2</h2>
+    </hgroup>
+
+    <h1>Paragraphs Sample</h1>
+    <p>
+      Once upon a time in a small village, there lived a young girl named Lily.
+      She loved exploring the woods and discovering new places. One day, she
+      found a hidden path that led to a magical garden filled with colorful
+      flowers and sparkling streams. Lily spent hours playing in the garden,
+      making friends with the animals and enjoying the beauty around her. As the
+      sun began to set, she promised to return the next day to continue her
+      adventure.
+    </p>
+    <p>
+      The next morning, Lily woke up early, eager to return to the magical
+      garden. She packed a small bag with some snacks and set off on her
+      journey. As she walked through the woods, she noticed the birds singing
+      and the sun shining brightly. When she arrived at the hidden path, she
+      felt a sense of excitement and wonder. She followed the path and soon
+      found herself back in the enchanting garden. This time, she discovered a
+      beautiful fountain in the center of the garden, with crystal-clear water
+      flowing gently. Lily sat by the fountain, enjoying the peaceful atmosphere
+      and feeling grateful for the magical place she had found.
+    </p>
+    <p>
+      As the days went by, Lily visited the magical garden every day. She
+      learned more about the plants and animals that lived there, and even
+      discovered a hidden treehouse high up in the branches of an ancient oak
+      tree. The treehouse became her secret hideaway, where she could watch the
+      world below and dream about her future adventures. Lily knew that the
+      garden was a special place, and she felt lucky to have found it. She
+      promised to always take care of it and keep its magic alive for years to
+      come.
+    </p>
+
+    <h1>Blockquote, links and horizontal line Sample</h1>
+    <blockquote>
+      The only true wisdom is in knowing you know nothing.
+    </blockquote>
+    <a href="https://en.wikipedia.org/wiki/Socrates">Socrates</a>
+    <hr />
+
+    <h1>Table Sample</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Animal</th>
+          <th>Class</th>
+          <th>Habitat</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Lion</td>
+          <td>Mammal</td>
+          <td>Savannah</td>
+        </tr>
+        <tr>
+          <td>Eagle</td>
+          <td>Bird</td>
+          <td>Mountains</td>
+        </tr>
+        <tr>
+          <td>Shark</td>
+          <td>Fish</td>
+          <td>Ocean</td>
+        </tr>
+        <tr>
+          <td>Frog</td>
+          <td>Amphibian</td>
+          <td>Swamps</td>
+        </tr>
+        <tr>
+          <td>Penguin</td>
+          <td>Bird</td>
+          <td>Antarctica</td>
+        </tr>
+        <tr>
+          <td>Elephant</td>
+          <td>Mammal</td>
+          <td>Savannah</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="3">End of animal list</td>
+        </tr>
+      </tfoot>
+    </table>
+
+    <h1>List sample</h1>
+    <ul>
+      <li>
+        Set clear goals and objectives
+        <ul>
+          <li>Define your vision</li>
+          <li>Break down tasks</li>
+          <li>Set deadlines</li>
+        </ul>
+      </li>
+      <li>
+        Stay focused and disciplined
+        <ol>
+          <li>Prioritize tasks</li>
+          <li>Eliminate distractions</li>
+          <li>
+            Take regular breaks
+            <ul>
+              <li>Go for a walk</li>
+              <li>Practice deep breathing</li>
+              <li>Stay hydrated</li>
+            </ul>
+          </li>
+        </ol>
+      </li>
+      <li>Maintain a positive attitude</li>
+      <li>Be adaptable and open to change</li>
+      <li>Learn from failures and mistakes</li>
+      <li>Seek feedback and continuous improvement</li>
+      <li>Build strong relationships and networks</li>
+      <li>Stay persistent and never give up</li>
+    </ul>
+
+    <h1>Text Samples</h1>
+    <p>
+      The <code>&lt;a&gt;</code> tag defines a hyperlink, which is used to link
+      from one page to another. The most important attribute of the
+      <code>&lt;a&gt;</code> element is the <code>href</code> attribute, which
+      indicates the link's destination.
+    </p>
+    <p>
+      The <kbd>&lt;kbd&gt;</kbd> tag is used to define keyboard input. The
+      content inside is displayed in the browser's default monospace font.
+    </p>
+    <p>
+      The <samp>&lt;samp&gt;</samp> tag is used to define sample output from a
+      computer program. The content inside is displayed in the browser's default
+      monospace font.
+    </p>
+    <p>
+      The <var>&lt;var&gt;</var> tag is used to define a variable in a computer
+      program. The content inside is displayed in the browser's default
+      monospace font.
+    </p>
+
+    <p>
+      The <code>&lt;pre&gt;</code> tag defines preformatted text. The text
+      inside a <code>&lt;pre&gt;</code> element is displayed in a fixed-width
+      font, and it preserves both spaces and line breaks. For example:
+    </p>
+    <pre>
+      function fibonacci(n) {
+        if (n <= 1) return n;
+        return fibonacci(n - 1) + fibonacci(n - 2);
+      }
+
+      console.log(fibonacci(10)); // Output: 55
+    </pre>
+    <p>
+      The <abbr title="HyperText Markup Language">&lt;abbr&gt;</abbr> tag is
+      used to represent an abbreviation or acronym. When the user hovers over
+      the abbreviation, the full description is displayed, providing additional
+      context. This is particularly useful for technical terms or phrases that
+      may not be immediately clear to all readers.
+    </p>
+    <p>
+      The <code>&lt;summary&gt;</code> tag is used in conjunction with the
+      <code>&lt;details&gt;</code> tag to provide a summary or caption for the
+      details that can be viewed or hidden by the user. For example:
+
+      <details>
+        <summary>More about the magical garden</summary>
+        <p>
+          The magical garden was not just an ordinary place. It had a unique
+          charm that captivated anyone who visited. The flowers seemed to bloom
+          in the most vibrant colors, and the streams sparkled like diamonds
+          under the sunlight. The garden was a sanctuary for many animals, and
+          they lived in harmony, creating a peaceful and serene environment.
+        </p>
+      </details>
+    </p>
+    <p>
+      The <code>&lt;address&gt;</code> tag is used to define the contact
+      information for the author or owner of a document or article. The content
+      inside is typically displayed in italics and can include physical
+      addresses, email addresses, phone numbers, and URLs. For example:
+    </p>
+    <address>
+      Written by John Doe.<br />
+      Visit us at:<br />
+      Example.com<br />
+      Box 564, Disneyland<br />
+      USA
+    </address>
   </body>
 </html>
